--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async src="http://localhost:3000/api/w-js?token=650ffa21a890829b186277f6"></script>
+    <!-- <script>
+      window.embeddedChatbotConfig = {
+      chatbotId: "pSsckkqCffShPZzkcQA79",
+      domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="pSsckkqCffShPZzkcQA79"
+      domain="www.chatbase.co"
+      defer>
+      </script> -->
   </body>
 </html>
